--- a/client/src/app/pages/confirm-page/confirm-page.component.scss
+++ b/client/src/app/pages/confirm-page/confirm-page.component.scss
@@ -184,3 +184,20 @@ h3 {
         color: #c62828;
     }
 }
+
+@media (max-width: 480px) {
+    .confirmation-container {
+        padding: 1rem;
+    }
+
+    .sub-option {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    .sub-btn {
+        margin-left: 0;
+        margin-top: 1rem;
+        width: 100%;
+    }
+}
