--- a/client/src/app/pages/product-page/product-page.component.scss
+++ b/client/src/app/pages/product-page/product-page.component.scss
@@ -12,7 +12,8 @@
     margin-bottom: 30px;
 
     .product-left {
-        flex: 0 0 320px;
+        flex: 0 1 320px;
+        min-width: 0;
 
         img {
             width: 100%;
